// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildExtrinsicPayload adds DCA params 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Sol": Uint8Array [
        44,
        36,
        125,
        194,
        57,
        131,
        79,
        234,
        192,
        236,
        219,
        197,
        7,
        10,
        126,
        11,
        93,
        15,
        70,
        45,
        9,
        233,
        235,
        168,
        113,
        173,
        30,
        185,
        119,
        4,
        72,
        35,
      ],
    },
    "retry_duration": 100,
  },
  {
    "chunk_interval": 5,
    "number_of_chunks": 100,
  },
]
`;

exports[`buildExtrinsicPayload adds affiliates 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [
    {
      "account": "0x7a467c9e1722b35408618a0cffc87c1e8433798e9c5a79339a10d71ede9e9d79",
      "bps": 10,
    },
  ],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload adds ccm params: dummy cf params 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  {
    "cf_parameters": "0x",
    "gas_budget": "0x75bcd15",
    "message": "0xdeadbeef",
  },
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload adds ccm params: with cf params 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  {
    "cf_parameters": "0x1234",
    "gas_budget": "0x75bcd15",
    "message": "0xdeadbeef",
  },
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload adds max boost fee 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  30,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Arbitrum ) 1`] = `
[
  "ArbEth",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Arb": Uint8Array [
        165,
        106,
        107,
        226,
        59,
        108,
        243,
        157,
        148,
        72,
        255,
        110,
        137,
        124,
        41,
        196,
        28,
        143,
        189,
        255,
      ],
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin P2PKH) 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Btc": {
        "P2PKH": Uint8Array [
          247,
          71,
          104,
          27,
          80,
          132,
          67,
          116,
          23,
          109,
          203,
          230,
          40,
          123,
          179,
          96,
          92,
          251,
          180,
          214,
        ],
      },
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin P2SH) 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Btc": {
        "P2SH": Uint8Array [
          11,
          140,
          0,
          207,
          248,
          221,
          132,
          129,
          59,
          162,
          197,
          188,
          192,
          144,
          253,
          68,
          213,
          94,
          122,
          1,
        ],
      },
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin P2WSH) 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Btc": {
        "P2WSH": Uint8Array [
          112,
          26,
          141,
          64,
          28,
          132,
          251,
          19,
          230,
          186,
          241,
          105,
          213,
          150,
          132,
          225,
          122,
          189,
          159,
          162,
          22,
          200,
          204,
          91,
          159,
          198,
          61,
          98,
          47,
          248,
          197,
          141,
        ],
      },
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin P2WSH) 2`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Btc": {
        "P2WSH": Uint8Array [
          205,
          191,
          144,
          158,
          147,
          92,
          133,
          93,
          62,
          141,
          27,
          97,
          174,
          185,
          197,
          227,
          192,
          58,
          232,
          2,
          27,
          40,
          104,
          57,
          177,
          167,
          47,
          46,
          72,
          253,
          186,
          112,
        ],
      },
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Bitcoin Taproot) 1`] = `
[
  "Btc",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Btc": {
        "Taproot": Uint8Array [
          195,
          150,
          14,
          157,
          114,
          152,
          60,
          50,
          82,
          123,
          75,
          250,
          94,
          52,
          83,
          212,
          211,
          208,
          11,
          102,
          108,
          165,
          172,
          231,
          222,
          40,
          21,
          125,
          98,
          135,
          153,
          13,
        ],
      },
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Ethereum ) 1`] = `
[
  "Eth",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Eth": Uint8Array [
        165,
        106,
        107,
        226,
        59,
        108,
        243,
        157,
        148,
        72,
        255,
        110,
        137,
        124,
        41,
        196,
        28,
        143,
        189,
        255,
      ],
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Polkadot hex) 1`] = `
[
  "Dot",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Dot": Uint8Array [
        42,
        251,
        169,
        39,
        142,
        48,
        204,
        246,
        166,
        206,
        179,
        168,
        182,
        227,
        54,
        183,
        0,
        104,
        240,
        69,
        198,
        102,
        242,
        231,
        244,
        249,
        204,
        95,
        71,
        219,
        137,
        114,
      ],
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Polkadot ss58) 1`] = `
[
  "Dot",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Dot": Uint8Array [
        42,
        251,
        169,
        39,
        142,
        48,
        204,
        246,
        166,
        206,
        179,
        168,
        182,
        227,
        54,
        183,
        0,
        104,
        240,
        69,
        198,
        102,
        242,
        231,
        244,
        249,
        204,
        95,
        71,
        219,
        137,
        114,
      ],
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Solana base58) 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Sol": Uint8Array [
        44,
        36,
        125,
        194,
        57,
        131,
        79,
        234,
        192,
        236,
        219,
        197,
        7,
        10,
        126,
        11,
        93,
        15,
        70,
        45,
        9,
        233,
        235,
        168,
        113,
        173,
        30,
        185,
        119,
        4,
        72,
        35,
      ],
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds refund parameters (Solana hex) 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  {
    "min_price": "0x9184e72a000",
    "refund_address": {
      "Sol": Uint8Array [
        44,
        36,
        125,
        194,
        57,
        131,
        79,
        234,
        192,
        236,
        219,
        197,
        7,
        10,
        126,
        11,
        93,
        15,
        70,
        45,
        9,
        233,
        235,
        168,
        113,
        173,
        30,
        185,
        119,
        4,
        72,
        35,
      ],
    },
    "retry_duration": 100,
  },
  null,
]
`;

exports[`buildExtrinsicPayload adds the broker commission 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  100,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Arbitrum: to Arbitrum 1`] = `
[
  "Sol",
  "ArbEth",
  {
    "Arb": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Bitcoin: to Bitcoin 1`] = `
[
  "Sol",
  "Btc",
  {
    "Btc": "0x6263727431703738356d676138646a6333723566376166616563686c7468346c617861747932727430386e6367796477346a377a76386e703573756637657476",
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Ethereum: to Ethereum 1`] = `
[
  "Sol",
  "Flip",
  {
    "Eth": Uint8Array [
      165,
      106,
      107,
      226,
      59,
      108,
      243,
      157,
      148,
      72,
      255,
      110,
      137,
      124,
      41,
      196,
      28,
      143,
      189,
      255,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Polkadot (hex): to Polkadot (hex) 1`] = `
[
  "Sol",
  "Dot",
  {
    "Dot": Uint8Array [
      42,
      251,
      169,
      39,
      142,
      48,
      204,
      246,
      166,
      206,
      179,
      168,
      182,
      227,
      54,
      183,
      0,
      104,
      240,
      69,
      198,
      102,
      242,
      231,
      244,
      249,
      204,
      95,
      71,
      219,
      137,
      114,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Polkadot (ss58): to Polkadot (ss58) 1`] = `
[
  "Sol",
  "Dot",
  {
    "Dot": Uint8Array [
      42,
      251,
      169,
      39,
      142,
      48,
      204,
      246,
      166,
      206,
      179,
      168,
      182,
      227,
      54,
      183,
      0,
      104,
      240,
      69,
      198,
      102,
      242,
      231,
      244,
      249,
      204,
      95,
      71,
      219,
      137,
      114,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;

exports[`buildExtrinsicPayload builds basic swap params to Solana: to Solana 1`] = `
[
  "Sol",
  "SolUsdc",
  {
    "Sol": Uint8Array [
      44,
      36,
      125,
      194,
      57,
      131,
      79,
      234,
      192,
      236,
      219,
      197,
      7,
      10,
      126,
      11,
      93,
      15,
      70,
      45,
      9,
      233,
      235,
      168,
      113,
      173,
      30,
      185,
      119,
      4,
      72,
      35,
    ],
  },
  0,
  null,
  0,
  [],
  null,
  null,
]
`;
